@@ -5,6 +5,10 @@ WebAuth 4.4.2 (unreleased)
     Fix an occasional WebKDC crash (introduced in 4.4.0) when attempting
     to determine if an authentication is interactive.
 
+    Fix out-of-tree builds with --enable-webkdc.  Some of the logic to
+    ensure the Perl modules could build when the build directory was not
+    the source directory had not been tested for a while.
+
 WebAuth 4.4.1 (2013-01-31)
 
     Add a new authenticate callback to the WebLogin configuration.  If
